<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#075e54"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/top_layout"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:src="@drawable/chinesefood"
            android:id="@+id/chinese_food"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:clickable="true"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray"
            android:focusable="true"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:clickable="true"
            android:id="@+id/continental_food"
            android:scaleType="fitXY"
            android:src="@drawable/continental"
            android:background="@android:color/darker_gray"
            android:focusable="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/todo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/top_layout"
        android:id="@+id/text_view1"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:text="@string/chinese_food"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:layout_gravity="bottom"
            android:id="@+id/chinese_food_text_view"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/continental_food_text_view"
            android:text="@string/continental_food"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/text_view1"
        android:id="@+id/second_layout"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:src="@drawable/pakistanifood"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:clickable="true"
            android:id="@+id/pakistani_food"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray"
            android:focusable="true"
            android:contentDescription="@string/todo"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:id="@+id/starter"
            android:layout_gravity="center"
            android:clickable="true"
            android:scaleType="fitXY"
            android:src="@drawable/starter"
            android:background="@android:color/darker_gray"
            android:focusable="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/todo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/second_layout"
        android:id="@+id/text_view2"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/pakistani_food_text_view"
            android:textSize="20sp"
            android:text="@string/pakistani_food"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:layout_gravity="bottom"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/starter_text_view"
            android:text="@string/starter"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/third_layout"
        android:layout_below="@+id/text_view2"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:src="@drawable/fastfood"
            android:layout_gravity="center"
            android:clickable="true"
            android:scaleType="fitXY"
            android:id="@+id/fast_food"
            android:background="@android:color/darker_gray"
            android:focusable="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/todo"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            android:id="@+id/drinks"
            android:src="@drawable/drinks"
            android:layout_gravity="center"
            android:clickable="true"
            android:scaleType="fitXY"
            android:background="@android:color/darker_gray"
            android:focusable="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/todo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/third_layout"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/fast_food_text_view"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/fast_food"
            android:layout_margin="5dp"
            android:layout_gravity="bottom"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/drinks_text_view"
            android:text="@string/drinks"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            />
    </LinearLayout>

</RelativeLayout>